--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -1,13 +1,23 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: "Passion One", sans-serif;
+    --font3: "Sriracha", cursive;
+}
+
 *{
     margin: 0;
     padding: 0;
+    font-size: 1em;
 }
 
 html, body{
     min-height: 100%;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 
 header{
@@ -19,6 +29,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 3.5em;
 }
 
 header > p{
@@ -40,6 +52,11 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+}
+
+section.normal > p{
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -50,11 +67,29 @@ section.normal{
 section.imagem{
     background: rgb(39, 39, 39);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.445);
 }
 
 section.imagem > p{
-    background-color: rgba(0, 0, 0, 0.274);
-    width: 400px;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.322);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01{
+    background-image: url(imagens/background001.jpg);
+    background-size: cover;
+    background-position: right center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+}
+
+section#img02{
+    background-image: url(imagens/background002.jpg);
+    background-size: cover;
+    background-position: right center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 footer{
